finalStyle.css
/* ... */
.socialbutton1, .socialbutton2 {
  margin-right: 2%; }

.btn3 {
  /*font-size: 30px;*/
  padding-right: 3px; }

@media only screen and (min-width: 300px) and (max-width: 415px) and (max-height: 820px) {
  /*Mobile portrait*/
  #backtotoparrow {
    bottom: 22px;
    margin-left: 85.5%;
    width: 40px;
    height: 40px; }

  #arrowlabel {
    margin-top: -12px; }

  .affix {
    padding-top: 2px; }

  .navbar-custom .navbar-toggle, .navbar-custom .navbar-toggle:hover, .navbar-custom .navbar-toggle:focus {
    padding: 2px 0px 0px 0px;
    /* border-color: #01A9DB; */
    /* margin-top: 0; */ }

  header {
    height: 650px;
  }

  header .container {
    padding-top: 100px;
    padding-bottom: 75px; }

  #maincontent {
    padding-bottom: 55px; }

  .btn-outline {
    font-size: 18.25px;
    margin-left: -5px; }

  #animation {
    width: 102%;
    margin-top: 10px;
    margin-left: 1px; }

  header .intro-text .name1 {
    margin-top: 5px;
    font-size: 62.5px; }

  header .intro-text .name2 {
    font-size: 62.5px; }

  .headerh4 {
    margin-top: 17.5px;
    text-align: center;
    text-transform: none;
    letter-spacing: 1.5px;
    display: inline-block;
    margin-left: 2px; }

  .headerh4-1, .headerh4-2 {
    padding-left: 4%; }

  header .intro-text .skills1, .skills2, .skills3 {
    font-size: 22.5px;
    margin-bottom: -10px;
    display: inline-block; }

  section {
    padding: 65px 0px 55px 0px; }

  #experienceid {
    padding: 10px 50px;
  }

  #experienceid:after {
    margin-top: 10px;
  }

  .experienceh2 {
    margin-top: 5px;
  }

  .experience-logo {
    width: 35%;
    margin-bottom: 5px;
  }

  .experience-header {
    display: flex;
    flex-direction: column;
  }

  .experience-header-title {
    width: 100%;
  }

  .experience-header h2 {
    font-size: 25px;
  }

  .experience-header h3 {
    font-size: 20px;
    margin-top: -5px;
  }

  .experience-dates {
    font-size: 18px;
    margin-top: 12.5px;
  }

  .experience-body {
    margin-left: 0px;
    margin-top: 25px;
  }

  .experience-bullet {
    font-size: 15px;
    max-width: 100%;
  }

  .experience-photo-title {
    padding: 4px 8px 2px 8px;
    height: 25px;
    margin-bottom: 30px;
  }

  .experience-photo-title p {
    font-size: 13px;
  }

  .portfoliorow1 {
    -webkit-transform: translate3d(-150px, 0px, 0px); }

  .portfoliorow1.in-view {
    -webkit-transform: translate3d(0px, 0px, 0px); }

  .portfoliorow2 {
    -webkit-transform: translate3d(150px, 0px, 0px); }

  .portfoliorow2.in-view {
    -webkit-transform: translate3d(0px, 0px, 0px); }

  .portfoliorow3 {
    -webkit-transform: translate3d(-150px, 0px, 0px); }

  .portfoliorow3.in-view {
    -webkit-transform: translate3d(0px, 0px, 0px); }

  .portfolio-modal .modal-content h2 {
    font-size: 29px; }

  #portfolioid {
    overflow: hidden;
  }

  .linkpic {
    width: 15%;
    padding-top: 12.5px;
    padding-left: 12.5px; }

  .fullstack {
    padding-top: 7%; }

  .portfolio-modal .modal-content {
    padding-top: 60px; }

  .portfolio-modal .modal-content .btn {
    font-size: 17.5px;
  }

  .portfolio-modal .close-modal .lr .rl {
    height: 40px; }

  .portfolio-modal .close-modal .lr {
    height: 40px;
    margin-left: 20px; }

  .portfolio-modal .close-modal {
    width: 45px;
    height: 45px;
    font-size: 200px;
    padding-top: 3px;
    margin-left: -10px; }

  .portfolioh2 {
    margin-top: -5px;
  }

  .portfoliohr {
    margin-top: 25px;
    margin-bottom: 5px; }

  .portfolioinfo {
    font-size: 16px; }

  .video-embed {
    width: 300px;
    height: 315px;
  }

  .dividertitle {
    font-size: 25px;
    margin-top: 20px; }

  section.skills {
    padding: 55px 0px 55px 0px; }

  .skillbox {
    margin-top: 2.5%; }

  .skillsh2 {
    margin-top: 25px; }

  .skillinfo {
    padding-top: 3%; }

  .skillinfo_middle {
    padding-top: 3%; }

  section.about {
    padding: 65px 0px 60px 0px; }

  #about p {
    font-size: 17px; }

  .abouth2 {
    margin-top: 15px; }

  #about1, #about2 {
    margin-right: 0%; }

  #about #prebutton {
    font-size: 19px;
    margin-bottom: -5px; }

  .aboutsection1, .aboutsection2, .aboutsection3 {
    -webkit-transform: translate3d(-50px, 0px, 0px); }

  .aboutrow {
    padding-top: 3%; }

  .aboutsectionhr {
    margin-top: 17.5px;
    margin-bottom: 5px;
    margin-left: 0px;
    border-width: 3px; }

  .contacth2 {
    margin-top: -2.5px; }

  #name, #email, #phone {
    color: white;
    height: 30px;
    font-size: 20px; }

  #message {
    color: white;
    height: 90px;
    margin-top: -15px;
    font-size: 20px; }

  section.contact {
    padding-bottom: 10px;
  }

  #contact .btn {
    margin-top: 20px;
  }

  .contacth2 {
    margin-top: 20px;
  }

  .contacthr {
    border-top: 4px solid #01BCF5;
    padding-bottom: 20px; }

  .contactp {
    text-align: left;
    margin-top: -10px;
    font-size: 20px; }

  .footerp {
    padding-top: 3%;
    font-family: Lato;
    font-size: 20px; }

  .footerh3 {
    margin-top: -10px;
    font-size: 30px; }

  .list-inline {
    margin-top: -20px;
    margin-bottom: -15px; }

  .btn-social, .btn-social:hover {
    font-size: 32.5px;
    padding-top: 5px;
    padding-left: 2px; }

  .socialbutton1 {
    margin-left: 3%; }

  .socialbutton1, .socialbutton2 {
    margin-right: 10%; }

  .btn3 {
    font-size: 30px;
    padding-right: 3px; } }
/* ... */

